tests/fixtures/invalid/divmod_int_bytes.py
# Cannot call divmod() with Int, Bytes
x = divmod(1, b"hello")
